Lab 4 updated